# spectre-indexer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: binaries.yml
cli/: Cargo.toml
cli/src/: cli_args.rs
database/: Cargo.toml
database/src/: client.rs
database/src/models/types/: hash.rs
indexer/: Cargo.toml
indexer/src/: checkpoint.rs  main.rs  settings.rs  vars.rs
indexer/src/blocks/: fetch_blocks.rs  process_blocks.rs
indexer/src/transactions/: process_transactions.rs
indexer/src/utxo_import/: p2p_initializer.rs  utxo_set_importer.rs
indexer/src/virtual_chain/: accept_transactions.rs  add_chain_blocks.rs  process_virtual_chain.rs  remove_chain_blocks.rs
indexer/src/web/: web_server.rs
indexer/src/web/endpoint/: health.rs  metrics.rs
indexer/src/web/model/: health.rs  metrics.rs
mapping/: Cargo.toml
mapping/src/: blocks.rs  mapper.rs  transactions.rs
spectred/: Cargo.toml
spectred/src/pool/: manager.rs
