[package]
name = "spectre-database"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[lib]
name = "spectre_database"
crate-type = ["cdylib", "lib"]

[dependencies]
spectre-hashes.workspace = true
sqlx.workspace = true
itertools.workspace = true
regex.workspace = true
log.workspace = true
