[package]
name = "spectre-indexer"
description = "Spectre Indexer"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
spectre-cli.workspace = true
spectre-spectred.workspace = true
spectre-database.workspace = true
spectre-mapping.workspace = true
spectre-wrpc-client.workspace = true
spectre-rpc-core.workspace = true
spectre-p2p-lib.workspace = true
spectre-consensus-core.workspace = true
spectre-hashes.workspace = true
spectre-addresses.workspace = true
spectre-utils.workspace = true
spectre-txscript.workspace = true
tokio.workspace = true
tonic.workspace = true
deadpool.workspace = true
futures-util.workspace = true
crossbeam-queue.workspace = true
moka.workspace = true
chrono.workspace = true
bigdecimal.workspace = true
hex.workspace = true
env_logger.workspace = true
log.workspace = true
clap.workspace = true
axum.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-axum.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
bytesize.workspace = true
humantime.workspace = true
url.workspace = true
rand.workspace = true
uuid = { version = "1.12.1", features = ["v4"] }
