[package]
name = "spectre-mapping"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[lib]
name = "spectre_mapping"
crate-type = ["cdylib", "lib"]

[dependencies]
spectre-cli.workspace = true
spectre-database.workspace = true
spectre-rpc-core.workspace = true
bigdecimal.workspace = true
log.workspace = true
clap.workspace = true
