[package]
name = "spectre-spectred"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[lib]
name = "spectre_spectred"
crate-type = ["cdylib", "lib"]

[dependencies]
spectre-wrpc-client.workspace = true
spectre-rpc-core.workspace = true
tokio.workspace = true
deadpool.workspace = true
workflow-core.workspace = true
log.workspace = true
